# Vita3K

./: .gitignore  3470.patch  CMakeLists.txt  gen-linux.sh  vitatree.txt
llm/: dump_vita3k_files.sh  dump_vita3k_files_super_smooth.sh
llm/llm/output/: vita3k_vblank_files.txt
llm/output/: vita3k_super_smooth_context.txt  vita3k_vblank_files.txt
src/emulator/: main.cpp
src/emulator/app/src/: app_init.cpp
src/emulator/gui/src/: settings_dialog.cpp
vita3k/: CMakeLists.txt  gui_stubs.h  interface.cpp  interface.h  main.cpp  vita3k_gui_stubs.h
vita3k/app/: CMakeLists.txt
vita3k/app/src/: app_init.cpp
vita3k/compat/: CMakeLists.txt
vita3k/compat/include/compat/: functions.h  state.h
vita3k/compat/src/: compat.cpp
vita3k/config/include/config/: config.h
vita3k/corey/: CMakeLists.txt
vita3k/corey/include/corey/: corey_perf.h
vita3k/corey/src/: app_init.cpp  corey_config.cpp  corey_perf.cpp  corey_window.cpp  gui.cpp  main_menubar.cpp
vita3k/cpu/include/cpu/: common.h
vita3k/cpu/src/: dynarmic_cpu.cpp
vita3k/dialog/: CMakeLists.txt
vita3k/dialog/include/dialog/: state.h
vita3k/display/include/display/: functions.h
vita3k/display/src/: display.cpp
vita3k/emuenv/: CMakeLists.txt
vita3k/emuenv/include/emuenv/: state.h
vita3k/gui/src/: disassembly_dialog.cpp  gui.cpp  settings_dialog.cpp  vita3k_update.cpp
vita3k/gxm/src/: textures.cpp
vita3k/io/src/: io.cpp
vita3k/kernel/: CMakeLists.txt
vita3k/kernel/include/kernel/thread/: host_thread_scheduler.h  linux_scheduler.h  thread_state.h
vita3k/kernel/src/: host_thread_scheduler_common.cpp  host_thread_scheduler_linux.cpp  host_thread_scheduler_windows.cpp  kernel.cpp  linux_scheduler.cpp  thread.cpp
vita3k/lang/: CMakeLists.txt
vita3k/lang/src/: lang.cpp
vita3k/mem/include/: address.h
vita3k/mem/include/mem/: block.h  functions.h  ptr.h  util.h
vita3k/mem/src/: mem.cpp
vita3k/module/src/: load_module.cpp
vita3k/modules/: CMakeLists.txt  CMakeLists.txt.backup
vita3k/modules/SceCommonDialog/: SceCommonDialog.cpp
vita3k/modules/SceDisplay/: SceDisplay.cpp
vita3k/modules/SceGxm/: SceGxm.cpp
vita3k/modules/SceIme/: SceIme.cpp
vita3k/modules/ScePower/: ScePower.cpp
vita3k/renderer/: CMakeLists.txt
vita3k/renderer/include/renderer/vulkan/: screen_filters.h
vita3k/renderer/src/: scene.cpp  shaders.cpp
vita3k/renderer/src/gl/: renderer.cpp  sync_state.cpp
vita3k/renderer/src/texture/: replacement.cpp
vita3k/renderer/src/vulkan/: pipeline_cache.cpp  renderer.cpp  surface_cache.cpp
vita3k/rtc/include/rtc/: rtc.h
vita3k/rtc/src/: rtc.cpp
vita3k/shader/src/: gxp_parser.cpp  spirv_recompiler.cpp  usse_utilities.cpp
